# fuzzy-barnacle

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.pi  README.md  docker-compose.pi.yml  pyproject.toml  quantdash_agent_instructions.md
apps/web/: .prettierrc  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  data.ts  screener.ts  strategies.ts  technicals.ts
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/components/charts/: ChartToolbar.tsx  IndicatorDialog.tsx  IndicatorLegend.tsx  IndicatorPanel.tsx  IndicatorSettingsDialog.tsx  MarketClocks.tsx  SymbolSearchDialog.tsx  TVChartContainer.tsx  TVDashboard.tsx  TVTickerTape.tsx  TradingChart.tsx
apps/web/src/components/charts/series/: AreaFillSeries.ts
apps/web/src/components/signals/: MarketIntel.tsx  NewsSentimentPanel.tsx  SignalGauge.tsx  SignalPanel.tsx  TechnicalsGauge.tsx  TechnicalsPanel.tsx  WatchlistPanel.tsx
apps/web/src/hooks/: index.ts  useMarketData.ts
apps/web/src/pages/: BacktestLab.tsx  DataExplorer.tsx  MarketIntelPage.tsx  PortfolioOptimizer.tsx  Screener.tsx  StrategyBuilder.tsx
apps/web/src/stores/: favoritesStore.ts
apps/web/src/theme/: theme.ts
apps/web/src/types/: screener.ts  strategy.ts  technicals.ts
docs/: ml-signal-system-plan.md
notebooks/: train_colab.ipynb
scripts/: build_dataset.py  precompute_finbert.py  run_inference.py  run_screener.py  train_model.py
src/quantdash/: __init__.py
src/quantdash/alerts/: telegram.py
src/quantdash/config/: __init__.py  logging.py  settings.py  symbols.py
src/quantdash/core/: __init__.py  models.py
src/quantdash/data/: __init__.py  cache.py  news_cache.py  screener_cache.py
src/quantdash/data/providers/: __init__.py  base.py  cached.py  yfinance.py
src/quantdash/derivatives/: __init__.py  futures.py  options.py
src/quantdash/engine/: __init__.py
src/quantdash/engine/backtest/: __init__.py  base.py  metrics.py  vectorbt_engine.py
src/quantdash/engine/execution/: __init__.py
src/quantdash/features/: __init__.py  advanced_patterns.py  candlestick_patterns.py  elliott_wave.py  harmonic_patterns.py  indicators.py  patterns.py  screener.py  screener_models.py  technicals.py
src/quantdash/ml/: __init__.py  config.py
src/quantdash/ml/data/: __init__.py  builder.py  dataset.py  features.py  labeling.py  macro.py  news_embeddings.py  splits.py
src/quantdash/ml/inference/: __init__.py  batch_runner.py  predictor.py
src/quantdash/ml/models/: __init__.py  branches.py  fusion.py  signal_net.py
src/quantdash/ml/risk/: __init__.py  circuit_breakers.py  position_sizing.py
src/quantdash/ml/strategy/: __init__.py  ml_signal_strategy.py
src/quantdash/ml/training/: __init__.py  callbacks.py  losses.py  rl_finetune.py  supervised.py
src/quantdash/portfolio/: __init__.py
src/quantdash/portfolio/optimizer/: __init__.py  mean_variance.py  risk_parity.py
src/quantdash/services/: __init__.py
src/quantdash/services/api/: __init__.py  main.py
src/quantdash/services/api/routes/: __init__.py  data.py  derivatives.py  features.py  health.py  news.py  strategies.py  symbols.py
src/quantdash/strategies/: __init__.py  base.py  registry.py
src/quantdash/strategies/builtins/: adx_trend.py  atr_breakout.py  bollinger_reversion.py  breakout_trading.py  chandelier_exit.py  contango_fade.py  expected_move.py  fibonacci_pullback.py  gamma_scalp.py  gap_trading.py  heikin_ashi_momentum.py  ichimoku_cloud_strategy.py  iv_mean_reversion.py  macd_divergence.py  mean_reversion.py  ml_momentum.py  ml_momentum_v2.py  multi_agent_broker.py  multi_agent_broker_v2.py  order_flow_imbalance.py  pairs_trading.py  regime_detection.py  rsi_extremes.py  sma_crossover.py  squeeze_momentum.py  vwap_reversion.py
tests/: conftest.py  test_indicators.py  test_patterns.py  test_screener.py
